# research-inbox

./: .gitignore  LICENSE  README.md  RI-DEV.md  index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  overlay.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: libggml-base.0.9.11.dylib  libllama.0.0.8763.dylib  libmtmd.0.0.8763.dylib
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: clipboard_read  clipboard_read.swift  get_selected_text  get_selected_text.swift  ocr  ocr.swift  request_input_monitoring.swift  simulate_copy  simulate_copy.swift
src-tauri/src/: commands.rs  db.rs  lib.rs  models.rs  source_detect.rs
src-tauri/src/ai/: mod.rs  pack_agent.rs  pipeline.rs  sidecar.rs  ttl.rs  vec.rs
src/components/: AgentLog.tsx  AskBar.tsx  BottomNav.tsx  CaptureOverlay.tsx  ClusterCard.tsx  ExportPreview.tsx  InboxPanel.tsx  ItemCard.tsx  Onboarding.tsx  PackEditor.tsx  PackView.tsx  PacksList.tsx  SearchBar.tsx  Settings.tsx  TagInput.tsx  Toast.tsx  TopicsView.tsx
src/lib/: i18n.ts  ipc.ts  store.ts
src/locales/: en.json  ru.json
src/styles/: globals.css  tokens.css
